@@ -44,7 +44,7 @@
             <li><a href="http://www.gtkmm.org">About gtkmm</a></li>
             <li><a href="FAQ/html/index.html">FAQs</a></li>
             <li><a href="http://www.gtkmm.org/download.shtml">Download</a></li>
-            <li><a href="http://www.gtkmm.org/gtkmm2/gtkmm-docs.tar.gz">Offline documentation</a></li>
+            <li><a href="http://www.gtkmm.org/docs/gtkmm-2.4/gtkmm-2-4-docs.tar.gz">Offline documentation</a></li>
            </ul>
           </td>
           <td valign="Top" height="75">
