@@ -1,5 +1,14 @@
 2005-01-07  Murray Cumming  <murrayc@murrayc.com>
 
+	* Makefile.am: Offline documentation tarball: Do not try to tar up non 
+	existant docs/internals directory. Put 2-4 in the tarball name to 
+	avoid confusion.
+	* docs/index.html: Correct the offline documentation link, so that 
+	people do not download the tarball for the 2.0 documentation instead.
+	Bug #163122.
+
+2005-01-07  Murray Cumming  <murrayc@murrayc.com>
+
 	* gtk/src/modelfilter.hg: Added documentation for set_modify_func().
 	* pango/src/renderer.hg: Added get_color(),
 	* pango/src/color.hg: Added operator bool() so that people can check 
